--- a/docs/cv-basics.ipynb
+++ b/docs/cv-basics.ipynb
@@ -6,7 +6,7 @@
     "id": "rX8mhOLljYeM"
    },
    "source": [
-    "# TensorFlow MNIST II\n",
+    "# TF MNIST I\n",
     "\n",
     "Computer vision - build a neural network.\n",
     "\n",
