--- a/docs/mnist-pytorch.ipynb
+++ b/docs/mnist-pytorch.ipynb
@@ -1,10 +1,8 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 9,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
         "# MNIST PyTorch"
       ]
@@ -16,6 +14,13 @@
         "*The following code example is based on Mikhail Klassen's article [Tensorflow vs. PyTorch by example](https://towardsdatascience.com/tensorflow-vs-pytorch-by-example-66d37901c663)*\n",
         "\n",
         "First, you need to [install PyTorch](https://pytorch.org/get-started/locally/) in a new [Anaconda environment](https://docs.conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Setup"
       ]
     },
     {
@@ -36,6 +41,13 @@
         "# Get CPU or GPU device for training\n",
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "device = torch.device(device)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Define settings"
       ]
     },
     {
@@ -85,6 +97,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data preparation"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
@@ -111,6 +130,13 @@
         "# Define the data loaders that will handle fetching of data\n",
         "train_loader = torch.utils.data.DataLoader(dataset1,**train_kwargs)\n",
         "test_loader = torch.utils.data.DataLoader(dataset2, **test_kwargs)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Model architecture"
       ]
     },
     {
@@ -146,6 +172,13 @@
         "        x = self.fc2(x)\n",
         "        output = F.softmax(x, dim=1)\n",
         "        return output"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Model training"
       ]
     },
     {
