--- a/docs/mnist-tensorflow.ipynb
+++ b/docs/mnist-tensorflow.ipynb
@@ -42,6 +42,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Define settings"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
@@ -75,6 +82,13 @@
         "\n",
         "# Data input shape\n",
         "input_shape = (28, 28, 1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data preparation"
       ]
     },
     {
@@ -116,6 +130,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Model architecture"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {
@@ -139,6 +160,13 @@
         "    tf.keras.layers.Dropout(0.5),\n",
         "    tf.keras.layers.Dense(num_classes, activation='softmax')\n",
         "])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Model training"
       ]
     },
     {
