--- a/docs/keras-intro.ipynb
+++ b/docs/keras-intro.ipynb
@@ -623,9 +623,13 @@
         "\n",
         "The Sequential model is easy to use, but its applicability is extremely limited: it can\n",
         "only express models with a single input and a single output, applying one layer after\n",
-        "the other in a sequential fashion. In practice, it’s pretty common to encounter models\n",
+        "the other in a sequential fashion. \n",
+        "\n",
+        "In practice, it’s pretty common to encounter models\n",
         "with multiple inputs (say, an image and its metadata), multiple outputs (different\n",
         "things you want to predict about the data), or a nonlinear topology.\n",
+        "\n",
+        "\n",
         "In such cases, you’d build your model using the Functional API. This is what most\n",
         "Keras models you’ll encounter in the wild use. It’s fun and powerful—it feels like playing\n",
         "with LEGO bricks."
@@ -817,9 +821,9 @@
         "\n",
         "Let’s say you’re building a system to rank customer support tickets by priority and route them to the appropriate department. Your model has three inputs:\n",
         "\n",
-        "- The title of the ticket (text input)\n",
-        "- The text body of the ticket (text input)\n",
-        "- Any tags added by the user (categorical input, assumed here to be one-hot\n",
+        "1. The title of the ticket (text input)\n",
+        "1. The text body of the ticket (text input)\n",
+        "1. Any tags added by the user (categorical input, assumed here to be one-hot\n",
         "encoded)\n",
         "\n",
         "We can encode the text inputs as arrays of ones and zeros of size `vocabulary_size`\n",
@@ -849,23 +853,37 @@
       },
       "outputs": [],
       "source": [
+        "# 1) DEFINE VARIABLES\n",
+        "# Size of vocabulary obtained when preprocessing text data\n",
         "vocabulary_size = 10000\n",
+        "# Number of unique issue tags\n",
         "num_tags = 100\n",
+        "# Number of departments for predictions\n",
         "num_departments = 4\n",
         "\n",
-        "# Define model inputs\n",
+        "# 2) DEFINE MODEL INPUTS\n",
+        "# Title of tickets\n",
         "title = keras.Input(shape=(vocabulary_size,), name=\"title\")\n",
+        "# Body of the tickets\n",
         "text_body = keras.Input(shape=(vocabulary_size,), name=\"text_body\")\n",
+        "# Tagy added by user\n",
         "tags = keras.Input(shape=(num_tags,), name=\"tags\")\n",
         "\n",
+        "# 3) FEATURES\n",
         "# Combine input \n",
         "features = layers.Concatenate()([title, text_body, tags])\n",
+        "# Intermediate layer\n",
         "features = layers.Dense(64, activation=\"relu\")(features)\n",
         "\n",
+        "# 4) DEFINE MODEL OUTPUTS\n",
+        "# Priority score of the ticket\n",
         "priority = layers.Dense(1, activation=\"sigmoid\", name=\"priority\")(features)\n",
+        "# Department that should handle the ticket\n",
         "department = layers.Dense(\n",
         "    num_departments, activation=\"softmax\", name=\"department\")(features)\n",
         "\n",
+        "# 5) CREATE MODEL\n",
+        "# Specify inputs and outputs\n",
         "model = keras.Model(inputs=[title, text_body, tags], outputs=[priority, department])"
       ]
     },
