--- a/docs/keras-sequential.ipynb
+++ b/docs/keras-sequential.ipynb
@@ -8,16 +8,26 @@
       "source": [
         "# Sequential model\n",
         "\n",
-        "This is a companion notebook for the excellent book [Deep Learning with Python, Second Edition](https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff). "
+        "*This is a companion notebook for the excellent book [Deep Learning with Python, Second Edition](https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff) ([code provided by François Chollet](https://github.com/fchollet/deep-learning-with-python-notebooks)).* \n",
+        "\n",
+        "The Sequential model, the most approachable API—it’s basically a Python list. As such, it’s limited to simple (sequential) stacks of layers."
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7mhwlGWJ58nv"
-      },
+      "metadata": {},
       "source": [
-        "The Sequential model, the most approachable API—it’s basically a Python list. As such, it’s limited to simple (sequential) stacks of layers."
+        "## Setup"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers"
       ]
     },
     {
@@ -46,9 +56,6 @@
         }
       ],
       "source": [
-        "from tensorflow import keras\n",
-        "from tensorflow.keras import layers\n",
-        "\n",
         "model = keras.Sequential([\n",
         "    layers.Dense(64, activation=\"relu\"),\n",
         "    layers.Dense(10, activation=\"softmax\")\n",
