--- a/docs/structured_data_classification_from_scratch.ipynb
+++ b/docs/structured_data_classification_from_scratch.ipynb
@@ -6,7 +6,7 @@
         "id": "-iNtJdvrb_vd"
       },
       "source": [
-        "# Structured data classification from scratch\n",
+        "# Structured data classification\n",
         "\n",
         "This tutorial is based on:\n",
         "\n",
