--- a/docs/structured_data_classification_from_scratch.ipynb
+++ b/docs/structured_data_classification_from_scratch.ipynb
@@ -86,10 +86,10 @@
         "id": "RzNNij6qb_vl"
       },
       "source": [
-        "## Preparing the data\n",
+        "## Data\n",
         "\n",
         "\n",
-        "### Import\n",
+        "### Data import\n",
         "Let's download the data and load it into a Pandas dataframe:"
       ]
     },
@@ -319,7 +319,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Data splitting\n",
+        "### Data splitting\n",
         "\n",
         "Let's split the data into a training and validation set:"
       ]
@@ -554,7 +554,7 @@
         "id": "AWVbzdlob_vs"
       },
       "source": [
-        "## Feature preprocessing with Keras layers\n",
+        "## Feature preprocessing\n",
         "\n",
         "Next, we perform feature preprocessing with Keras layers. \n",
         "\n",
@@ -677,7 +677,7 @@
         "id": "YWxgxJc1b_vt"
       },
       "source": [
-        "## Build a model\n",
+        "## Model\n",
         "\n",
         "With this done, we can create our end-to-end model:"
       ]
@@ -888,7 +888,7 @@
         "id": "5igsOv1jb_vv"
       },
       "source": [
-        "## Train the model"
+        "## Training"
       ]
     },
     {
@@ -963,7 +963,7 @@
         "id": "jRUwMs6jb_vv"
       },
       "source": [
-        "## Inference on new data\n",
+        "## Predictions\n",
         "\n",
         "To get a prediction for a new sample, you can simply call `model.predict()`. There are\n",
         "just two things you need to do:\n",
