--- a/docs/structured_data_classification_from_scratch.ipynb
+++ b/docs/structured_data_classification_from_scratch.ipynb
@@ -833,9 +833,10 @@
         "\n",
         "[Model.compile](https://keras.io/api/models/model_training_apis/) configures the model for training:\n",
         "\n",
-        "- [Optimizer](https://keras.io/api/optimizers/): one common option for the optimizer is [Adam](https://keras.io/api/optimizers/adam/),a stochastic gradient descent method that is based on adaptive estimation of first-order and second-order moments.\n",
-        "- [loss](https://keras.io/api/losses/): The purpose of loss functions is to compute the quantity that a model should seek to minimize during training. \n",
-        "- [metrics](https://keras.io/api/metrics/): A metric is a function that is used to judge the performance of your model.\n"
+        "- [Optimizer](https://keras.io/api/optimizers/): The mechanism through which the model will update itself based on the training data it sees, so as to improve its performance. One common option for the optimizer is [Adam](https://keras.io/api/optimizers/adam/),a stochastic gradient descent method that is based on adaptive estimation of first-order and second-order moments.\n",
+        "- [loss](https://keras.io/api/losses/): How the model will be able to measure its performance on the training data, and thus how it will be able to steer itself in the right direction. This menas the purpose of loss functions is to compute the quantity that a model should seek to minimize during training. \n",
+        "- [metrics](https://keras.io/api/metrics/): A metric is a function that is used to judge the performance of your model during training and testing. Here, we’ll only care about accuracy\n",
+        "(the fraction of the images that were correctly classified).\n"
       ]
     },
     {
