--- a/docs/mnist-tensorflow.ipynb
+++ b/docs/mnist-tensorflow.ipynb
@@ -4,13 +4,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# MNIST TensorFlow\n",
+        "# MNIST with TensorFlow\n",
         "\n",
         "*The following code example is mainly based on Mikhail Klassen's article [Tensorflow vs. PyTorch by example](https://towardsdatascience.com/tensorflow-vs-pytorch-by-example-66d37901c663)*\n",
         "\n",
         "## MNIST\n",
         "\n",
-        "The MNIST database (Modified National Institute of Standards and Technology database[1]) is a large database of handwritten digits that is commonly used for training various image processing systems.\n",
+        "The MNIST database (Modified National Institute of Standards and Technology database) is a large database of handwritten digits that is commonly used for training various image processing systems.\n",
         "\n",
         "![](https://upload.wikimedia.org/wikipedia/commons/2/27/MnistExamples.png)\n",
         "\n",
