--- a/docs/chapter08_intro_to_dl_for_computer_vision_i.ipynb
+++ b/docs/chapter08_intro_to_dl_for_computer_vision_i.ipynb
@@ -15,7 +15,11 @@
       "source": [
         "*This is a companion notebook for the excellent book [Deep Learning with Python, Second Edition](https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff).* \n",
         "\n",
-        "The following listing shows what a basic convnet looks like. It’s a stack of Conv2D\n",
+        "The fundamental difference between a densely connected layer and a convolution\n",
+        "layer is this: Dense layers learn global patterns in their input feature space (for example, for a MNIST digit, patterns involving all pixels), whereas convolution layers learn local patterns—in the case of images, patterns found in small 2D windows of the\n",
+        "inputs.\n",
+        "\n",
+        "The following code shows what a basic convnet looks like. It’s a stack of Conv2D\n",
         "and MaxPooling2D layers. We’ll build the model using the Functional API."
       ]
     },
@@ -68,6 +72,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Our training images are stored in an array of shape (60000, 28, 28) of type uint8 with values in the [0, 255] interval:\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {},
@@ -89,22 +100,132 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "60000"
+              "array([[[  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           3,  18,  18,  18, 126, 136, 175,  26, 166, 255, 247, 127,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,  30,  36,  94, 154,\n",
+              "         170, 253, 253, 253, 253, 253, 225, 172, 253, 242, 195,  64,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,  49, 238, 253, 253, 253,\n",
+              "         253, 253, 253, 253, 253, 251,  93,  82,  82,  56,  39,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,  18, 219, 253, 253, 253,\n",
+              "         253, 253, 198, 182, 247, 241,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,  80, 156, 107, 253,\n",
+              "         253, 205,  11,   0,  43, 154,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,  14,   1, 154,\n",
+              "         253,  90,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0, 139,\n",
+              "         253, 190,   2,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  11,\n",
+              "         190, 253,  70,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "          35, 241, 225, 160, 108,   1,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,  81, 240, 253, 253, 119,  25,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,  45, 186, 253, 253, 150,  27,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,  16,  93, 252, 253, 187,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0,   0, 249, 253, 249,  64,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,  46, 130, 183, 253, 253, 207,   2,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "          39, 148, 229, 253, 253, 253, 250, 182,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  24, 114,\n",
+              "         221, 253, 253, 253, 253, 201,  78,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,  23,  66, 213, 253,\n",
+              "         253, 253, 253, 198,  81,   2,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,  18, 171, 219, 253, 253, 253,\n",
+              "         253, 195,  80,   9,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,  55, 172, 226, 253, 253, 253, 253, 244,\n",
+              "         133,  11,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0, 136, 253, 253, 253, 212, 135, 132,  16,\n",
+              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0],\n",
+              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "           0,   0,   0,   0]]], dtype=uint8)"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "len(train_labels)"
+        "train_images[0:1]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Let's take a look at our labels:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(60000,)"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "train_labels.shape"
       ]
     },
     {
@@ -128,16 +249,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data preprocessing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Before training, we’ll preprocess the data:\n",
+        "\n",
+        "1. `reshape()`: we reshape our training data to format (60000, 28, 28, 1); test data to (10000, 28, 28, 1). \n",
+        "\n",
+        "1. `astype()`: we transform the data into float32\n",
+        "\n",
+        "1. We *scale* the data (devide by 255) so that all values are in the [0, 1] interval. \n",
+        "\n",
+        "\n",
+        "Hence, we’ll transform our data into a float32 array of shape (60000, 28, 28, 1) with values between 0 and 1."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
         "train_images = train_images.reshape((60000, 28, 28, 1))\n",
+        "\n",
         "train_images = train_images.astype(\"float32\") / 255\n",
+        "\n",
         "test_images = test_images.reshape((10000, 28, 28, 1))\n",
+        "\n",
         "test_images = test_images.astype(\"float32\") / 255"
       ]
     },
@@ -147,16 +292,62 @@
         "id": "_apRCwI5lC2x"
       },
       "source": [
-        "**Instantiating a small convnet**"
+        "## Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The following code shows what a basic convnet looks like (we use the Functional API). In essence, it’s a stack of Conv2D and MaxPooling2D layers. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Convolutions operate over rank-3 tensors called feature maps, with two spatial axes\n",
+        "(height and width) as well as a depth axis (also called the channels axis). For an RGB\n",
+        "image, the dimension of the depth axis is 3, because the image has three color channels: red, green, and blue. For a black-and-white picture, like the MNIST digits, the depth is 1 (levels of gray).\n",
+        "\n",
+        "The convolution operation extracts patches from its input feature map and applies the same transformation to all of these patches, producing an output feature map. This output feature map is still a rank-3 tensor: it has a width and a height. Its depth can be arbitrary, because the output depth is a parameter of the layer, and the different channels in that depth axis no longer stand for specific colors\n",
+        "as in RGB input; rather, they stand for filters. \n",
+        "\n",
+        "Filters encode specific aspects of the input data: at a high level, a single filter could encode the concept “presence of a face in the input,” for instance.\n",
+        "\n",
+        "In the MNIST example, the first convolution layer takes a feature map of size (28,\n",
+        "28, 1) and outputs a feature map of size (26, 26, 32): it computes 32 filters over its\n",
+        "input. Each of these 32 output channels contains a 26   26 grid of values, which is a\n",
+        "response map of the filter over the input, indicating the response of that filter pattern at\n",
+        "different locations in the input (see figure 8.3)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- `Input`: A convnet takes as input tensors of shape (image_height, image_width,\n",
+        "image_channels), not including the batch dimension. In our case, we’ll configure the\n",
+        "convnet to process inputs of size (28, 28, 1), which is the format of MNIST images. \n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "5jJkEqAplC2x"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2022-04-02 13:42:01.099605: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+            "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+          ]
+        }
+      ],
       "source": [
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
@@ -191,11 +382,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "5TPSGfW1lC2z"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model: \"model\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input_1 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
+            "                                                                 \n",
+            " conv2d (Conv2D)             (None, 26, 26, 32)        320       \n",
+            "                                                                 \n",
+            " max_pooling2d (MaxPooling2D  (None, 13, 13, 32)       0         \n",
+            " )                                                               \n",
+            "                                                                 \n",
+            " conv2d_1 (Conv2D)           (None, 11, 11, 64)        18496     \n",
+            "                                                                 \n",
+            " max_pooling2d_1 (MaxPooling  (None, 5, 5, 64)         0         \n",
+            " 2D)                                                             \n",
+            "                                                                 \n",
+            " conv2d_2 (Conv2D)           (None, 3, 3, 128)         73856     \n",
+            "                                                                 \n",
+            " flatten (Flatten)           (None, 1152)              0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 10)                11530     \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 104,202\n",
+            "Trainable params: 104,202\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ],
       "source": [
         "model.summary()"
       ]
